--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,5 @@
 /*! tailwindcss v4.1.18 | MIT License | https://tailwindcss.com */
+@layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
@@ -6,6 +7,9 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --spacing: 0.25rem;
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -158,4 +162,244 @@
     display: none !important;
   }
 }
-@layer utilities;
+@layer utilities {
+  .m-auto {
+    margin: auto;
+  }
+  .flex {
+    display: flex;
+  }
+  .table {
+    display: table;
+  }
+  .h-\[40px\] {
+    height: 40px;
+  }
+  .w-\[375\] {
+    width: 375;
+  }
+  .w-\[375px\] {
+    width: 375px;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .resize {
+    resize: both;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .justify-around {
+    justify-content: space-around;
+  }
+  .gap-\[9px\] {
+    gap: 9px;
+  }
+  .gap-\[15\] {
+    gap: 15;
+  }
+  .gap-\[15px\] {
+    gap: 15px;
+  }
+  .gap-\[38px\] {
+    gap: 38px;
+  }
+  .gap-\[145\] {
+    gap: 145;
+  }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .bg-\[\#673A44\] {
+    background-color: #673A44;
+  }
+  .bg-\[red\] {
+    background-color: red;
+  }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-\[12px\] {
+    font-size: 12px;
+  }
+  .font-\[400\] {
+    --tw-font-weight: 400;
+    font-weight: 400;
+  }
+  .text-\[\#FFFFFF\] {
+    color: #FFFFFF;
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
+  .md\:mr-\[10px\] {
+    @media (width >= 48rem) {
+      margin-right: 10px;
+    }
+  }
+  .md\:mr-\[30px\] {
+    @media (width >= 48rem) {
+      margin-right: 30px;
+    }
+  }
+  .md\:mr-\[100px\] {
+    @media (width >= 48rem) {
+      margin-right: 100px;
+    }
+  }
+  .md\:ml-\[-30px\] {
+    @media (width >= 48rem) {
+      margin-left: -30px;
+    }
+  }
+  .md\:ml-\[-100px\] {
+    @media (width >= 48rem) {
+      margin-left: -100px;
+    }
+  }
+  .md\:ml-\[-600px\] {
+    @media (width >= 48rem) {
+      margin-left: -600px;
+    }
+  }
+  .md\:ml-\[39\] {
+    @media (width >= 48rem) {
+      margin-left: 39;
+    }
+  }
+  .md\:ml-\[39px\] {
+    @media (width >= 48rem) {
+      margin-left: 39px;
+    }
+  }
+  .md\:ml-\[100px\] {
+    @media (width >= 48rem) {
+      margin-left: 100px;
+    }
+  }
+  .md\:ml-\[600px\] {
+    @media (width >= 48rem) {
+      margin-left: 600px;
+    }
+  }
+  .md\:h-\[40\] {
+    @media (width >= 48rem) {
+      height: 40;
+    }
+  }
+  .md\:h-\[40px\] {
+    @media (width >= 48rem) {
+      height: 40px;
+    }
+  }
+  .md\:w-\[768\] {
+    @media (width >= 48rem) {
+      width: 768;
+    }
+  }
+  .md\:w-\[768px\] {
+    @media (width >= 48rem) {
+      width: 768px;
+    }
+  }
+  .md\:justify-between {
+    @media (width >= 48rem) {
+      justify-content: space-between;
+    }
+  }
+  .md\:text-\[14px\] {
+    @media (width >= 48rem) {
+      font-size: 14px;
+    }
+  }
+  .lg\:h-\[40px\] {
+    @media (width >= 64rem) {
+      height: 40px;
+    }
+  }
+  .lg\:w-\[153px\] {
+    @media (width >= 64rem) {
+      width: 153px;
+    }
+  }
+  .lg\:w-\[1520px\] {
+    @media (width >= 64rem) {
+      width: 1520px;
+    }
+  }
+  .lg\:w-\[1530px\] {
+    @media (width >= 64rem) {
+      width: 1530px;
+    }
+  }
+  .lg\:w-\[1536px\] {
+    @media (width >= 64rem) {
+      width: 1536px;
+    }
+  }
+  .lg\:items-center {
+    @media (width >= 64rem) {
+      align-items: center;
+    }
+  }
+  .lg\:justify-around {
+    @media (width >= 64rem) {
+      justify-content: space-around;
+    }
+  }
+  .lg\:gap-0 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:gap-10 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:gap-50 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 50);
+    }
+  }
+  .lg\:gap-100 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 100);
+    }
+  }
+  .lg\:gap-140 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 140);
+    }
+  }
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@layer properties {
+  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
+    *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
+      --tw-font-weight: initial;
+      --tw-outline-style: solid;
+    }
+  }
+}
